creating some CG art
Co-authored-by: Lucas Leal <lucaslealvale01@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Three.js Tutorials by Sean Bradley : https://sbcode.net/threejs/</title>    
+    <title>Some CG art!</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
             overflow: hidden;
@@ -24,7 +25,17 @@
 </head>
 
 <body>
-    <script type="module" src="client.js"></script>
+    <script type="module" src="art.js"></script>
+    <div id="app">
+        <div class="absolute text-white text-center" style="top: 50%; transform: translate(-50%, -50%); left: 50%;">
+            <h1 style="font-size: 50px;">C O M P U T E R   G R A P H I C S</h1>
+            
+        </div>
+    </div>
 </body>
-
+<footer>
+    <div class="absolute text-white text-center -bottom-px">
+        <h2>Made by: Lucas Leal & Rafael Almada</h2>
+    </div>
+</footer>
 </html>
